--- a/src/Components/ScrollToTopButton/ScrollToTopButton.scss
+++ b/src/Components/ScrollToTopButton/ScrollToTopButton.scss
@@ -1,4 +1,5 @@
 .scroll-to-top-button {
+  z-index: 1;
     position: fixed;
     bottom: 30px;
     right: 10px;
@@ -22,7 +23,7 @@
     outline: none; 
   
     &:active {
-      background: #f24620 
+      background: #992627
     }
   }
   
